# Playground

./: README.md  pyproject.toml
playground/: api.py  hooks.py  modules.txt  patches.txt  production_plan_overrides.py  pyproject.toml  setup.py
playground/doctype/kit_content_framework/: kit_content_framework.json
playground/doctype/kit_content_framework_item/: kit_content_framework_item.json  kit_content_framework_item.py
playground/fixtures/: custom_field.json
playground/manufacturing/doctype/bom_item_replacement_detail/: bom_item_replacement_detail.json  bom_item_replacement_detail.py
playground/manufacturing/doctype/bom_item_replacement_tool/: bom_item_replacement_tool.js  bom_item_replacement_tool.json  bom_item_replacement_tool.py  test_bom_item_replacement_tool.py
playground/manufacturing/workspace/manufacturing/: manufacturing.json
playground/playground/: __init__.py  api.py  fgsrm_dashboard.py  fgsrm_manual_requirement.py  hooks.py  production_plan_mr_excel.py  production_plan_overrides.py  purchase_order_bulk.py  sales_order_hooks.py  sales_order_status.py
playground/playground/doctype/bom_update_request/: bom_update_request.js  bom_update_request.json  bom_update_request.py
playground/playground/doctype/expense_sales_invoice/: expense_sales_invoice.json  expense_sales_invoice.py
playground/playground/doctype/kit_content_mapping/: kit_content_mapping.js  (+2 more)
playground/playground/overrides/: __init__.py  gl_entry_debug.py  production_plan.py  purchase_invoice.py
playground/public/js/: purchase_order_list.js  sales_order_list.js  work_order.js
(+62 files in other folders)
